[build-system]
requires = [
    "hatchling>=1.3.1",
    "jupyterlab>=4,<5",
]
build-backend = "hatchling.build"

[project]
name = "jupyterlab_commands"
description = "Arbitrary python commands for notebooks in JupyterLab"
version = "0.4.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
authors = [
    { name = "Tim Paine" },
]
keywords = [
    "Jupyter",
    "JupyterLab",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "jupyterlab>=4,<5",
]

[project.optional-dependencies]
develop = [
    "check-manifest",
    "ruff",
    "pytest",
    "pytest-cov",
]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Repository = "https://github.com/timkpaine/jupyterlab_commands"
Homepage = "https://github.com/timkpaine/jupyterlab_commands"

[tool.check-manifest]
ignore = [
	"jupyterlab_commands/labextension/**",
	"js/**"
]

[tool.hatch.build]
artifacts = [
    "jupyterlab_commands/labextension"
]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_commands/labextension" = "share/jupyter/labextensions/jupyterlab_commands"
"jupyterlab_commands/extension/install.json" = "share/jupyter/labextensions/jupyterlab_commands/install.json"
"jupyterlab_commands/extension/jupyterlab_commands.json" = "etc/jupyter/jupyter_server_config.d/jupyterlab_commands.json"
"jupyterlab_commands/extension/notebook_commands" = "share/jupyter/notebook"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
    "binder",
    "docs",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlab_commands/labextension/package.json",
]
skip-if-exists = [
    "jupyterlab_commands/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "js"
build_cmd = "build"

[tool.ruff]
line-length = 120

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["jupyterlab_commands"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
