[bdist_wheel]
universal=1

[metadata]
description_file = README.md
long_description_content_type=text/markdown

[flake8]
max-line-length=200
exclude=jupyterlab_commands/tests

[manifix]
known-excludes =
    .git*
    .git/**/*
    .travis.yml
    **/node_modules/**/*
    **/__py_cache__/**/*
    **/*.pyc
    package-lock.json
    lib
    build
    dist
    Untitled*.ipynb
